# myfirstbot

./: pyproject.toml  test.py
E1/: bot.py  readme.md  setu.py
